--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  file_picker: ^9.1.0
+  http: ^1.3.0
+  intl: ^0.20.2
 
 
   # The following adds the Cupertino Icons font to your application.
