--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   file_picker: ^9.1.0
   http: ^1.3.0
   intl: ^0.20.2
+  timeago: ^3.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
